# sinto

./: .gitattributes  .gitignore  CNAME  LICENSE  MANIFEST.in  README.md  README.rst  basic_usage.html  genindex.html  index.html  installation.html  objects.inv  release_notes.html  requirements.txt  scatac.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: pytest.yml
_sources/: basic_usage.rst.txt  index.rst.txt  installation.rst.txt  release_notes.rst.txt
_sources/.ipynb_checkpoints/: basic_usage-checkpoint.rst.txt  installation-checkpoint.rst.txt  release_notes-checkpoint.rst.txt  scatac-checkpoint.rst.txt
_static/: documentation_options.js
docs/: basic_usage.rst  conf.py  index.rst  installation.rst  objects.inv  release_notes.rst
scripts/: sinto
sinto/: __init__.py  _version.py  addbarcodes.py  addtags.py  arguments.py  blocks.py  cli.py  filterbarcodes.py  fragments.py  sort.py  tagtoname.py  tagtorg.py  tagtotag.py  utils.py
sinto/.ipynb_checkpoints/: arguments-checkpoint.py  constants-checkpoint.py  sort-checkpoint.py  utils-checkpoint.py
tests/: test_addtags.py  test_filterbarcodes.py  test_fragments.py  test_tag_to_rg.py  test_tag_to_tag.py
tests/data/: a_line1.sam  barcodes.tsv  frags_across.bed  frags_within.bed  tags.tsv  tags_line1.sam  test.bam  test.bam.bai
tests/data/.ipynb_checkpoints/: frags_across-checkpoint.bed
