[metadata]
name = sinto
version = 0.9.0
url = https://timoast.github.io/sinto/
project_urls =
    Bug Tracker = https://github.com/timoast/sinto/issues
author = Tim Stuart
author_email = tstuart@nygenome.org
description = Tools for single-cell data processing
long_description = file: README.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
install_requires =
    pysam >= 0.14
    scipy
    numpy
packages = find:

[options.entry_points]
console_scripts = 
    sinto = sinto.arguments:main


